--- a/16_or/index.html
+++ b/16_or/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>or ou ||/title>
+    <title>or </title>
 </head>
 <body>
     <script src="js/scripts.js"></script>
+    <h1>teste</h1>
 </body>
 </html>
