--- a/32_this/index.html
+++ b/32_this/index.html
@@ -6,6 +6,16 @@
     <title> This</title>
 </head>
 <body>
+    <h1>Título principal</h1>
+    <p id="paragrafo">Este é o paragráfo</p>
+
+<ul id="lista">
+    <li class="item">Item 1</li>
+    <li class="item">Item 2</li>
+    <li class="item">Item 3</li>
+    <li class="item">Item 4</li>
+</ul>
+
     <script src="js/scripts.js"></script>
 </body>
 </html>
