--- a/33_DOM/index.html
+++ b/33_DOM/index.html
@@ -7,7 +7,15 @@
 </head>
 <body>
     <h1>Título principal</h1>
-    <p>java</p>
+    <p id="paragrafo">Este é o paragráfo</p>
+
+<ul id="lista">
+    <li class="item">Item 1</li>
+    <li class="item">Item 2</li>
+    <li class="item">Item 3</li>
+    <li class="item">Item 4</li>
+</ul>
+
     <script src="js/scripts.js"></script>
 </body>
 </html>
