--- a/34_queryselector/index.html
+++ b/34_queryselector/index.html
@@ -3,16 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> dom</title>
+    <title>query selector</title>
 </head>
 <body>
     <h1>Título principal</h1>
-    <p id="paragrafo">Este é o paragráfo</p>
+    <p id="paragrafo">Este é o paragráfo <span>oi</span></p>
 
 <ul id="lista">
     <li class="item">Item 1</li>
     <li class="item">Item 2</li>
     <li class="item">Item 3</li>
+    <li class="item">Item 4</li>
     <li class="item">Item 4</li>
 </ul>
 
@@ -22,6 +23,7 @@
     <li class="item">item 7</li>
     <li class="item">item 8</li>
 </ul>
+
 
     <script src="js/scripts.js"></script>
 </body>
