--- a/48_mouseOver_mouseOut/index.html
+++ b/48_mouseOver_mouseOut/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mouseover e mouseout</title>
+    <title>evento click</title>
 
 </head>
 <body>
