mouseover e mouseout com texto

--- a/47_eventosclick/index.html
+++ b/47_eventosclick/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>mouseover e mouseout</title>
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
     <h1 id="title">Título principal</h1>
-    <p id="paragrafo">Este é o paragráfo <span>oi</span></p>
+   
     <h2 class="subtitle">este é o segundo título</h2>
+    <p id="legenda" class="hide">texto escondido</p>
 
     <div><button id="btn">click em mim</button></div>
 
